--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,9 @@
     --color-primary: #4D41C0;
     --white: #FFFFFF;
     --text-light-gray: #AAAAAA;
+    --star-yellow: #FFBB3A;
+    --text-assessments: #989898;
+
 }
 
 * {
@@ -82,7 +85,7 @@ a, a:hover {
     align-items: center;
     justify-content: space-between;
     border-radius: 0 0 8px 8px;
-    min-height: 150px;
+    height: 220px;
     text-align: center;
 }
 
@@ -90,6 +93,29 @@ a, a:hover {
     font-size: 14px;
     font-weight: 700;
     margin-bottom: 25px;
+}
+
+.dsmovie-card-description-bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dsmovie-card-description-bottom h4 {
+    font-size: 16px;
+    font-weight: 700;
+    color: var(--star-yellow);
+}
+
+.dsmovie-card-description-bottom img {
+    width: 22px;
+}
+
+.dsmovie-card-description-bottom p {
+    font-size: 12px;
+    font-weight: 400;
+    color: var(--text-assessments);
+    margin-bottom: 10px;
 }
 
 .dsmovie-btn, .dsmovie-btn:hover {
